--- a/pom.xml
+++ b/pom.xml
@@ -19,9 +19,13 @@
         <!-- JUnit Jupiter aggregator (includes api + engine + params) -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter</artifactId>
-            <version>${junit.jupiter.version}</version>
-            <scope>test</scope>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.10.0</version> <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.10.0</version> <scope>test</scope>
         </dependency>
     </dependencies>
 
